[gd_scene load_steps=2 format=2]

[ext_resource path="res://prefabs/ui/game_menu/game_menu.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 7.0
margin_top = 7.0
margin_right = 377.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSettings" type="Button" parent="Control/VBoxContainer"]
margin_right = 370.0
margin_bottom = 20.0
text = "Settings"

[node name="ButtonSave" type="Button" parent="Control/VBoxContainer"]
margin_top = 24.0
margin_right = 370.0
margin_bottom = 44.0
text = "Save"

[node name="VSplitContainer" type="VSplitContainer" parent="Control/VBoxContainer"]
margin_top = 48.0
margin_right = 370.0
margin_bottom = 130.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMainMenu" type="Button" parent="Control/VBoxContainer"]
margin_top = 134.0
margin_right = 370.0
margin_bottom = 154.0
text = "Main menu"

[node name="ButtonQuit" type="Button" parent="Control/VBoxContainer"]
margin_top = 158.0
margin_right = 370.0
margin_bottom = 178.0
text = "Quit"

[node name="ButtonBack" type="Button" parent="Control/VBoxContainer"]
margin_top = 182.0
margin_right = 370.0
margin_bottom = 202.0
text = "Back"
[connection signal="pressed" from="Control/VBoxContainer/ButtonSettings" to="." method="_on_settings"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonSave" to="." method="_on_save"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonMainMenu" to="." method="_on_main_menu"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonQuit" to="." method="_on_quit"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonBack" to="." method="_on_back"]
